# uuidgen

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/uuidgen/: __init__.py  _core.py
